manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: simuladordocaos.com.br
    - http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: simulador-do-caos
                port:
                  number: 80
